# dkim-verify

./: .gitignore  pyproject.toml  verify-dkim.py
.github/workflows/: pylint.yml
